add foods functional
